overflow fixed

--- a/src/Components/ContactSupport/Contact.module.css
+++ b/src/Components/ContactSupport/Contact.module.css
@@ -111,8 +111,4 @@
     border-radius: 9px;
     background: #ffffff33;
   }
-
-  .btn {
-    /* margin-left: 100; */
-  }
 }
